MDEV-14022 Upgrade from 10.0/10.1 fails on assertion

rec_offs_validate(), rec_get_offsets_func(): Tolerate SYS_INDEXES
records where the last column MERGE_THRESHOLD is missing. This
column was added in MySQL 5.7 and MariaDB 10.2.2. For tables that
were created earlier, the column will be missing.